[Swagger] update documentation
